--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1880,3 +1880,26 @@ textarea.form-input::-webkit-resizer { display: none; }
   .timeline-text { max-width: 700px; }
 
 }
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* Aspect Ratio (height / width * 100%) */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.responsive-img {
+  width: 100%;
+  height: auto;
+}
+@media (min-width: 768px) {
+  .responsive-img {
+      width: 300px;
+  }
+}
