--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1903,3 +1903,44 @@ textarea.form-input::-webkit-resizer { display: none; }
       width: 300px;
   }
 }
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* Aspect Ratio (height / width * 100%) */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.responsive-img {
+  width: 100%;
+  height: auto;
+}
+@media (min-width: 768px) {
+  .responsive-img {
+      width: 300px;
+  }
+}
+/***
+*/
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.client-item {
+  flex: 1 0 100%; /* Cho mobile */
+}
+
+@media (min-width: 600px) { /* Điều chỉnh cho desktop */
+  .client-item {
+      flex: 1 0 calc(50% - 10px); /* Sử dụng 10px làm khoảng cách giữa các mục */
+  }
+}
+
